# memhax

./: .gitignore  CMakeLists.txt  LIS_Y.txt  README.md  build-all.bat  config-tf.yml  config-witcher1.yml
.cache/clangd/index/: 32.h.01614CF985C2CE88.idx  64.h.DFB53DEC5E9DA38D.idx  O1_size.hpp.5E7A2DE27C749ACB.idx  O1_size.hpp.7597402E3B4FCB66.idx  O1_size.hpp.83F9152EF9953D10.idx  O1_size_fwd.hpp.5C61CC4069963AC1.idx  O1_size_impl.hpp.89D5F5C246026097.idx  _cassert.h.48F8E2B6C168AEE0.idx  _prefix.h.3833C0378308FC10.idx  add.hpp.6545953B31D1F623.idx  add_const.hpp.8E98DC192F289A0C.idx  add_lvalue_reference.hpp.C08EEA74CB9DD530.idx  add_pointer.hpp.65E7F09072D9BA41.idx  add_reference.hpp.C23BF63181BEA12E.idx  add_rvalue_reference.hpp.E1B29C919D761896.idx  add_volatile.hpp.720C0AE0AFDFEC30.idx  addressof.hpp.BE6BC024DAADCFA9.idx  adl.hpp.27C853A9B3E6FE1D.idx  adl_barrier.hpp.AF30F28EEA4EC0EF.idx  adt.hpp.06BC349BB7C74102.idx  advance.hpp.2714F371129F9469.idx  advance.hpp.E2202A8B43A94EEF.idx  advance_backward.hpp.B5408EF8939C285C.idx  advance_backward.hpp.C3A0A611BDB121F7.idx  advance_forward.hpp.8885268C30F1E5EB.idx  advance_forward.hpp.E817F1F47CC15453.idx  advance_fwd.hpp.3D29AE871C2F0430.idx  alignment_of.hpp.5A41E00C0023D87B.idx  always.hpp.333E2F4F86F5A503.idx  and.hpp.569AB60F1E68598E.idx  and.hpp.619EF09EBE39E825.idx  and.hpp.B674519A4C87FB12.idx  android.h.CE2CA61E14802F25.idx  any.hpp.0F798E43502EAB11.idx  aob-signature-ptr.cpp.0583C4C7BB178FDD.idx  aob-signature-ptr.h.849C5572FB658834.idx  aob-signature.cpp.D77E840A8D3351D0.idx  aob-signature.h.523E0930BB6BDA9D.idx  apply.hpp.0520B02816500567.idx  apply.hpp.EF87B23D69C7DCA9.idx  (+642 more)
configure/: mingw32.bat  msvc-x64.bat  msvc-x86.bat  ninja-msvc-x64-release.bat  ninja-msvc-x64.bat  ninja-msvc.bat  vs-msvc.bat
drvr/: README.md
include/: README.md
lib/: README.md
projects/ac-external-hack/: README.md  build.bat
projects/ac-external-hack/src/: CMakeLists.txt  main.cpp  main.h.in
projects/ac-hack/: README.md  configure.bat  ninja-msvc.bat
projects/ac-hack/src/: CMakeLists.txt  main.cpp
projects/ac-internal-hack/: README.md  build.bat  configure.bat
projects/ac-internal-hack/src/: CMakeLists.txt  main.cpp  main.h.in
projects/dll-injector/: README.md
projects/dll-injector/src/: CMakeLists.txt  main.cpp  main.h.in
projects/dll-injector/src/enums/: methods.h
projects/dll-injector/src/injection-methods/: create-remote-thread-method.cpp  create-remote-thread-method.h  generic-method.h  manual-mapping-method.cpp  manual-mapping-method.h
projects/kerntest/: kerntest.sln
projects/kerntest/kerntest/: Driver.cpp  ReadMe.txt  kerntest.inf  kerntest.vcxproj  kerntest.vcxproj.filters
projects/tf-external-hack/: configure.bat
projects/tf-external-hack/src/: CMakeLists.txt  main.cpp
projects/tf-hack/: README.md
projects/tf-hack/src/: CMakeLists.txt  README.md
projects/winkmemdx64/: README.md  build.bat  load.bat  postbuild.bat  set-test.bat
projects/winkmemdx64/src/: CMakeLists.txt  main.c  main.cpp  main.h  winkmemdx64-api.h  winkmemdx64.inf
projects/winkmemdx64/src/modules/: communication.cpp  ctl.cpp  ctl.h  debug.cpp  debug.h  reactos.h
resources/: ac-research.txt  sigmaker-config.cpp
resources/sigmaker/: main.cpp
scripts/: ninja-msvc.bat  vs-msvc.bat
setup/: setup-mingw32.bat  setup-msvc-x64.bat  setup-msvc-x86.bat  setup-ninja-msvc-x64-release.bat  setup-ninja-msvc-x64-static-release.bat  setup-ninja-msvc-x64.bat
src/: sigmaker-monitor.cpp  sigmaker.cpp  tf-hack.cpp
src/ac-hack/: CMakeLists.txt  main.cpp
src/core/exceptions/: bad-memory-access.h
src/core/modules/: aob-signature-ptr.cpp  aob-signature.cpp  aob-signature.h  code-injection-handler.cpp  instruction-nop-handler.h  memory-span.h  module-info.h  process-memory-editor.cpp  process-memory-editor.h  win-api-external-process-memory-editor.cpp  win-api-external-process-memory-editor.h  win-api-internal-process-memory-editor.cpp  win-api-internal-process-memory-editor.h
src/dll-injector/: CMakeLists.txt  main.cpp
src/exceptions/: bad-memory-access.h
src/executables/sigmaker/: CMakeLists.txt
src/executables/sigmaker-monitor/: CMakeLists.txt
src/executables/tf-hack/: CMakeLists.txt
src/loops/: ac-hack-loop.cpp  ac-hack-loop.h
src/modules/: aob-sig-cfg.cpp  aob-sig-cfg.h  aob-sig.cpp  aob-sig.h  aob-signature-ptr.cpp  aob-signature-ptr.h  aob-signature.cpp  aob-signature.h  cached-sigmature.cpp  cached-signature.h  cheat-handler.cpp  cheat-handler.h  code-injection-cheat-handler.cpp  code-injection-cheat-handler.h  code-injection-handler.cpp  code-injection-handler.h  instruction-nop-cheat-handler.cpp  instruction-nop-cheat-handler.h  instruction-nop-handler.cpp  instruction-nop-handler.h  memory-span.h  multi-lvl-ptr.cpp  multi-lvl-ptr.h  pe-parser.cpp  pe-parser.h  process-memory-editor.cpp  process-memory-editor.h  sigmaker-config.cpp  sigmaker-config.h  sigmaker-data-mapper.cpp  sigmaker-data-mapper.h  sigmaker-scanner.cpp  sigmaker-scanner.h  sigmaker.cpp  sigmaker.h  sigmature.cpp  signature-config.cpp  signature-config.h  signature.h  trainer-utils.cpp  (+7 more)
src/projects/ac-hack/: CMakeLists.txt  main.cpp
src/projects/ac-internal-hack/: CMakeLists.txt  README.md  main.cpp
src/projects/dll-injector/: CMakeLists.txt  main.cpp
src/projects/tf-hack/: main.cpp
src/projects/tf-internal-hack/: CMakeLists.txt  main.cpp
src/resources/: sigmaker-config.h
src/resources/sigmaker/: main.h.in
src/structs/: dos-header.h  module-info.h  nt-headers.h
src/targets/sigmaker-monitor/: CMakeLists.txt  main.cpp
src/targets/tf-hack/: main.cpp
src/tf-hack/: CMakeLists.txt  main.cpp
src/tf-internal-hack/: CMakeLists.txt
trash/: config-tf.yml  sigmaker-data-mapper.cpp
